--- a/css/base.css
+++ b/css/base.css
@@ -18,7 +18,8 @@ a {
   text-decoration: none; }
 
 #gplus {
-  float: right; }
+  float: right;
+  margin: 10px -20px 0 0; }
 
 h1 {
   color: white;
