--- a/css/base.css
+++ b/css/base.css
@@ -34,6 +34,9 @@ h2 {
   overflow: hidden;
   text-overflow: ellipsis; }
 
+a, [ng-click] {
+  color: #1D1688; }
+
 body {
   background-color: #383636;
   position: absolute;
@@ -53,8 +56,7 @@ p {
   max-width: 1100px;
   width: 100%; }
   #main #content {
-    background-color: #fff;
-    border: 2px solid red; }
+    background-color: #fff; }
   #main ul li {
     border-bottom: 1px solid #e0e0e0;
     width: 100%;
@@ -81,6 +83,9 @@ p {
     cursor: pointer; }
   .meta-data .meta-block2 {
     display: block; }
+    @media screen and (max-width: 350px) {
+      .meta-data .meta-block2 {
+        width: 160px; } }
   .meta-data .meta-block1 {
     display: none; }
 
@@ -101,7 +106,6 @@ p {
       text-align: center;
       font-size: 22px;
       vertical-align: middle;
-      line-height: 30px;
       background-color: red;
       border-radius: 0 4px 4px 0;
       cursor: pointer; }
