--- a/sass/partials/_style.scss
+++ b/sass/partials/_style.scss
@@ -38,6 +38,10 @@ h1 {
 	padding: 0 10px;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 400;
+
+	@media screen and (max-width: 399){
+		font-size: 26px;
+	}
 }
 
 h2 {
@@ -101,8 +105,9 @@ p { line-height: 1.5em; }
 	.meta-block2 {
 		display: block;
 
-		@media screen and (max-width: 350px) {
+		@media screen and (max-width: 399px) {
 			width: 160px;
+			font-size: 14px;
 		}
 	}
 	.meta-block1 { display: none; }
