--- a/style/base.css
+++ b/style/base.css
@@ -35,10 +35,8 @@ h1 {
   color: white;
   padding: 0 10px;
   font-family: 'Montserrat', sans-serif;
-  font-weight: 400; }
-  @media screen and (max-width: 399) {
-    h1 {
-      font-size: 26px; } }
+  font-weight: 400;
+  font-size: 28px; }
 
 h2 {
   margin: 5px 0;
